platform/tempo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/component: tracing
